force-app/main/default/objects/Auto_Part__c/Auto_Part__c.object-meta.xml
<CustomObject>
    <description>Test</description>
    <label>Auto Part</label>
    <nameField>
        <label>Auto Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoParts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>