force-app/main/default/objects/Auto_Part__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <inlineHelpText>When you order the parts</inlineHelpText>
    <label>Order date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>