force-app/main/default/objects/Auto_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>